--- a/app/console/view/layout/index_layout.html
+++ b/app/console/view/layout/index_layout.html
@@ -3,7 +3,7 @@
 <head>
     {block name="meta"}{/block}
     {block name="title"}{/block}
-    {block name="link"}{/block}
+    {block name="style"}{/block}
 </head>
 <body>
 <body class="fixed-sidebar full-height-layout gray-bg" style="overflow:hidden">
