--- a/app/console/view/layout/login_layout.html
+++ b/app/console/view/layout/login_layout.html
@@ -3,7 +3,7 @@
 <head>
     {block name="meta"}{/block}
     {block name="title"}{/block}
-    {block name="link"}{/block}
+    {block name="style"}{/block}
 </head>
     {block name="body"}{/block}
     {block name="script"}{/block}
