--- a/app/console/view/index/index.html
+++ b/app/console/view/index/index.html
@@ -1,7 +1,7 @@
 {extend name="Layout:index_layout" /}
 {block name="meta"}{include file="Public:meta" /}{/block}
 {block name="title"}<title>Console</title>{/block}
-{block name="link"}{include file="Public:link" /}{/block}
+{block name="style"}{include file="Public:style" /}{/block}
 {block name="left_nav"}{include file="Public:left_nav" /}{/block}
 {block name="right_con"}{include file="Public:right_con" /}{/block}
 {block name="right_sid"}{include file="Public:right_sid" /}{/block}
