--- a/app/console/view/user/login.html
+++ b/app/console/view/user/login.html
@@ -1,30 +1,46 @@
-{extend name="Layout:com_layout" /}
+{extend name="Layout:login_layout" /}
 {block name="meta"}{include file="Public:meta" /}{/block}
 {block name="title"}<title>Login</title>{/block}
-{block name="link"}
-    <link rel="stylesheet" href="/static/Console/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/Console/css/login-new.css">
+{block name="style"}
+    <link rel="stylesheet" href="/static/console/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/console/css/login-new.css">
 {/block}
 {block name="body"}
 <body class="main">
     <div class="row">
+        <!--<div class="col-md-6" style="   ">-->
+            <!--&lt;!&ndash;<img src="/static/console/img/login-bg1.jpg" alt="" />&ndash;&gt;-->
+        <!--</div>-->
+        <div class="col-md-12">
         <form action="" method="post">
             <h1>Login In</h1>
             <div class="form-group">
                 <!--<label for="InputUser">Username</label>-->
-                <input type="text" class="form-control" placeholder="Username" required="" />
+                <input type="text"
+                       class="form-control"
+                       placeholder="Username"
+                       title="请输入4位以上的字符"
+                       pattern="^/S{4,}$"
+                       />
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Password" required="" />
+                <input type="text"
+                       class="form-control"
+                       placeholder="Password"
+                       required="" />
             </div>
             <div class="form-group code" style="">
-                <input type="text" class="form-control" placeholder="Code" required="" />
+                <input type="text"
+                       class="form-control"
+                       placeholder="Code"
+                       required="" />
                 <img src="" alt="code" class="form-control">
             </div>
             <div class="form-group">
                 <input type="submit" class="btn btn-default" value="Submit" />
             </div>
         </form>
+        </div>
     </div>
 </body>
 {/block}
