--- a/app/console/view/user/login.html
+++ b/app/console/view/user/login.html
@@ -12,11 +12,12 @@
             <!--&lt;!&ndash;<img src="/static/console/img/login-bg1.jpg" alt="" />&ndash;&gt;-->
         <!--</div>-->
         <div class="col-md-12">
-        <form action="" method="post">
+        <form action="" id="login_form" method="post" onsubmit="return false">
             <h1>Login In</h1>
             <div class="form-group">
                 <!--<label for="InputUser">Username</label>-->
                 <input type="text"
+                       name="username"
                        class="form-control"
                        placeholder="Username"
                        title="请输入4位以上的字符"
@@ -25,16 +26,18 @@
             </div>
             <div class="form-group">
                 <input type="text"
+                       name="password"
                        class="form-control"
                        placeholder="Password"
                        required="" />
             </div>
             <div class="form-group code" style="">
                 <input type="text"
+                       name="code"
                        class="form-control"
                        placeholder="Code"
                        required="" />
-                <img src="" alt="code" class="form-control">
+                <img src="{:captcha_img()}" alt="code" class="form-control">
             </div>
             <div class="form-group">
                 <input type="submit" class="btn btn-default" value="Submit" />
@@ -44,7 +47,19 @@
     </div>
 </body>
 {/block}
-<!--{block name="script"}-->
+{block name="js"}
+<script>
+    $("#login_form").validate({
+        submitHandler: function () {
+            doLogin();
+        }
+    });
 
-<!--{/block}-->
+    function doLogin() {
+        $(function () {
+            $.post()
+        })
+    }
+</script>
+{/block}
 
